[tool.poetry]
name = "cipher-haven"
version = "0.1.0"
description = ""
authors = ["Glade"]
readme = "README.md"
packages = [{include = "cipher_haven"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
